--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -7,13 +7,13 @@
     <div data-controller="question" data-action="click->question#hideCheckboxes">
         <div class="row mb-3">
             <div class="col-3">
-                <input type="text" placeholder="uuid" class="form-control"/>
+                <input type="text" data-input="uuid" data-question-target="uuid" data-action="question#onInput" placeholder="uuid" class="form-control"/>
             </div>
             <div class="col-3">
-                <input type="text" data-question-target="search" data-action="question#onInput" placeholder="question ou réponse" class="form-control"/>
+                <input type="text" data-input="search" data-question-target="search" data-action="question#onInput" placeholder="question ou réponse" class="form-control"/>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-3">
             <div class="col-3">
                 <div class="form-select d-flex justify-content-start"
                      data-action="click->question#showCheckboxes" data-checkboxes-for="categories" data-filter-select>
@@ -39,18 +39,18 @@
                         </button>
                     </div>
                     <div class="d-flex flex-wrap justify-content-start" data-click-not-hiding>
-                    {% for category in categories %}
-                        <label class="form-check-label mb-1 me-1" data-click-not-hiding>
-                            <input type="checkbox"
-                                   data-checkboxes="categories"
-                                   class="form-check-input"
-                                   value="{{ category.getName() }}"
-                                   data-action="change->question#onChangeCheckbox"
-                                   data-click-not-hiding
-                            >
-                            {{ category.getLabel() }}
-                        </label>
-                    {% endfor %}
+                        {% for category in categories %}
+                            <label class="form-check-label mb-1 me-1" data-click-not-hiding>
+                                <input type="checkbox"
+                                       data-checkboxes="categories"
+                                       class="form-check-input"
+                                       value="{{ category.getName() }}"
+                                       data-action="change->question#onMultiCheckboxesChange"
+                                       data-click-not-hiding
+                                >
+                                {{ category.getLabel() }}
+                            </label>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                                    data-checkboxes="questionTypes"
                                    class="form-check-input"
                                    value="{{ type.getName() }}"
-                                   data-action="change->question#onChangeCheckbox"
+                                   data-action="change->question#onMultiCheckboxesChange"
                                    data-click-not-hiding
                             >
                             {{ type.getLabel() }}
@@ -122,7 +122,7 @@
                                    data-checkboxes="statuses"
                                    class="form-check-input"
                                    value="{{ status }}"
-                                   data-action="change->question#onChangeCheckbox"
+                                   data-action="change->question#onMultiCheckboxesChange"
                                    data-click-not-hiding
                             >
                             {{ status }}
@@ -131,12 +131,19 @@
                 </div>
             </div>
         </div>
-{#        <select name="" id="" data-question-target="status" data-action="question#onChange" class="form-select">#}
-{#            <option value="all">Tous</option>#}
-{#            {% for status in statuses %}#}
-{#                <option value="{{ status }}">{{ status }}</option>#}
-{#            {% endfor %}#}
-{#        </select>#}
+        <div class="row mb-3">
+            <div class="col-2">
+                <label class="me-1 form-check-label">
+                    <input type="checkbox" class="form-check-input" data-checkbox="isHardcore" data-action="change->question#onSingleCheckboxChange"/>
+                    <span>Hardcore</span>
+                </label>
+
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" data-checkbox="hasMedia" data-action="change->question#onSingleCheckboxChange"/>
+                    <span>Media</span>
+                </label>
+            </div>
+        </div>
         <button data-action="question#test">Test</button>
     </div>
     {% block questions %}
@@ -145,12 +152,12 @@
             <thead>
                 <tr>
                     <th>Uuid</th>
-                    <th>Content</th>
-                    <th>Answer</th>
+                    <th>Contenu</th>
+                    <th>Réponse</th>
                     <th>Types</th>
-                    <th>Categories</th>
-                    <th>isHardcore</th>
-                    <th>Status</th>
+                    <th>Catégories</th>
+                    <th>Hardcore</th>
+                    <th>Statuts</th>
                     <th>Media</th>
                     <th>CreatedAt</th>
                     <th>UpdatedAt</th>
