--- a/back-office/assets/styles/custom.scss
+++ b/back-office/assets/styles/custom.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/scss/bootstrap";
+
 html, body {
   height: 100%;
 }
@@ -15,6 +17,7 @@ footer {
 #global-container {
   flex: 1 0 auto;
   padding-left: 0;
+  font-family: 'Lato', sans-serif;
 }
 
 .content-wrapper {
@@ -38,4 +41,36 @@ footer {
 
 .pointer-cursor {
   cursor: pointer;
+}
+
+.pagination > span {
+  margin: 0 3px;
+  padding: 2px 6px;
+  border-radius: 2px;
+}
+
+.pagination > .page,
+.pagination > .next,
+.pagination > .last,
+.pagination > .previous,
+.pagination > .first {
+  background-color: $gray-500;
+
+  &:hover {
+    background-color: $gray-700;
+  }
+}
+
+.pagination > .current {
+  background-color: $dark;
+  color: white;
+}
+
+.pagination a {
+  color: white;
+  text-decoration: none;
+
+  &:hover {
+    color: white;
+  }
 }
