Add no-underline links

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -26,6 +26,10 @@ a {
     transition: color 0.1s ease-out;
 }
 
+a.no-underline {
+    text-decoration: none;
+}
+
 a:hover {
     color: #b1e7fa;
     cursor: pointer;
