--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -11,7 +11,9 @@
 body {
     position: relative;
 
-    background-color: #2FB0DD;
+    background-color: #23C5EF;
+    background-image: url("/img/background.png");
+    background-repeat: repeat;
     min-height: 100vh;
     margin-bottom: -60px;
 
