--- a/frontend/src/css/util.css
+++ b/frontend/src/css/util.css
@@ -71,8 +71,9 @@
 }
 
 h1, .h1 {
-    font-size: 2.4em;
-    font-weight: 700;
+    font-family: 'Coolvetica Rg', sans-serif;
+    font-size: 4em;
+    font-weight: 400;
 }
 
 h2, .h2 {
