Update green button hover bg color

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -303,7 +303,7 @@ button:disabled {
 }
 
 .button.green:hover {
-    background-color: #34bc61
+    background-color: #1ad093;
 }
 
 #page-lateral-navigation {
